3. Complete Code Quality Overhaul